/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam.football;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf.football";
option java_outer_classname = "OffsideLineStateStreamElementPayloadProtos";

// Payload of an offsideLineState stream element
message OffsideLineStateStreamElementPayload {
    // empty by intention
}

// Object identifiers, group identifiers and positions in the content:
// If someone (a player) is in possession of the ball:
// objectIdentifiers[0] = Identifier of the player who is in possession of the ball
// groupIdentifiers[0] = Identifier of the team for which the offside line is calculated (i.e., the team which in possession of the ball)
// positions[0] = Position of the player who is in possession of the ball
// positions[1] = <x,0.0,0.0> where x is the x coordinate of the offside line
// for i = 0,...,getNumberOfPlayersInOffsidePosition()-1:
// objectIdentifiers[1+i] = Identifier of the ith player in offside position
// position[2+i] = Position of the ith player in offside position
// Otherwise:
// objectIdentifiers empty
// groupIdentifiers empty
// positions[0] = <0.0,0.0,0.0>